--- a/.github/workflows/runDevin.yaml
+++ b/.github/workflows/runDevin.yaml
@@ -16,15 +16,15 @@ jobs:
 
       - name: Start Devin
         run: |
-          docker run -it \
-              --pull=always \
-              -e SANDBOX_USER_ID=$(id -u) \
-              -e PERSIST_SANDBOX="true" \
-              -e SSH_PASSWORD=$SSH_PASSWORD \
-              -e WORKSPACE_MOUNT_PATH=${WORKSPACE_BASE:-/default/workspace/path} \
-              -v ${WORKSPACE_BASE:-/default/workspace/path}:/actions-runner \
-              -v /var/run/docker.sock:/var/run/docker.sock \
-              -p 3000:3000 \
-              --add-host host.docker.internal:host-gateway \
-              --name opendevin-app-$(date +%Y%m%d%H%M%S) \
-              ghcr.io/opendevin/opendevin:0.6
+          docker run \
+            --pull=always \
+            -e SANDBOX_USER_ID=$(id -u) \
+            -e PERSIST_SANDBOX="true" \
+            -e SSH_PASSWORD=$SSH_PASSWORD \
+            -e WORKSPACE_MOUNT_PATH=${WORKSPACE_BASE:-/default/workspace/path} \
+            -v ${WORKSPACE_BASE:-/default/workspace/path}:/actions-runner \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -p 3000:3000 \
+            --add-host host.docker.internal:host-gateway \
+            --name opendevin-app-$(date +%Y%m%d%H%M%S) \
+            ghcr.io/opendevin/opendevin:0.6
